admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnix-admin
  labels:
    app: learnix-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learnix-admin
  template:
    metadata:
      labels:
        app: learnix-admin
    spec:
      containers:
        - name: learnix-admin
          image: gcr.io/learnix-e-learning-436804/learnix-admin:latest
          
---
apiVersion: v1
kind: Service
metadata:
  name: learnix-admin
spec:
  clusterIP: None
  selector:
    app: learnix-admin
