courses-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnix-courses
  labels:
    app: learnix-courses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learnix-courses
  template:
    metadata:
      labels:
        app: learnix-courses
    spec:
      containers:
        - name: learnix-courses
          image: gcr.io/learnix-e-learning-436804/learnix-courses:latest
---
apiVersion: v1
kind: Service
metadata:
  name: learnix-courses
spec:
  clusterIP: None
  selector:
    app: learnix-courses
