instructor-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnix-instructor
  labels:
    app: learnix-instructor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learnix-instructor
  template:
    metadata:
      labels:
        app: learnix-instructor
    spec:
      containers:
        - name: learnix-instructor
          image: gcr.io/learnix-e-learning-436804/learnix-instructor:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: learnix-instructor
spec:
  clusterIP: None
  selector:
    app: learnix-instructor
