notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnix-notification
  labels:
    app: learnix-notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learnix-notification
  template:
    metadata:
      labels:
        app: learnix-notification
    spec:
      containers:
        - name: learnix-notification
          image: gcr.io/learnix-e-learning-436804/learnix-notification:latest
          
---
apiVersion: v1
kind: Service
metadata:
  name: learnix-notification
spec:
  clusterIP: None
  selector:
    app: learnix-notification
