order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnix-order
  labels:
    app: learnix-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learnix-order
  template:
    metadata:
      labels:
        app: learnix-order
    spec:
      containers:
        - name: learnix-order
          image: gcr.io/learnix-e-learning-436804/learnix-order:latest
        
---
apiVersion: v1
kind: Service
metadata:
  name: learnix-order
spec:
  clusterIP: None
  selector:
    app: learnix-order
