transcoder-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnix-transcoder
  labels:
    app: learnix-transcoder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learnix-transcoder
  template:
    metadata:
      labels:
        app: learnix-transcoder
    spec:
      containers:
        - name: learnix-transcoder
          image: gcr.io/learnix-e-learning-436804/learnix-transcoder:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: learnix-transcoder
spec:
  type: LoadBalancer
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
  selector:
    app: learnix-transcoder
