user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learnix-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learnix-user
  template:
    metadata:
      labels:
        app: learnix-user
    spec:
      containers:
      - name: learnix-user
        image: gcr.io/learnix-e-learning-436804/learnix-user:latest
---
apiVersion: v1
kind: Service
metadata:
  name: learnix-user
spec:
  clusterIP: None
  selector:
    app: learnix-user
