ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learnix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://learnixelearn.shop"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
    ingressClassName: nginx
spec:
  tls:
    - hosts:
        - app.learnixelearn.shop  
      secretName: tls-secret  
  rules:
    - host: app.learnixelearn.shop  
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific  
            backend:
              service:
                name: api-gateway  
                port:
                  number: 8000
          - path: /transcode(/|$)(.*)
            pathType: ImplementationSpecific  
            backend:
              service:
                name: learnix-transcoder  
                port:
                  number: 8001
